--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </div>
           <div class="san-pham-2">
             <div class="san-pham">
-            <a href="http://127.0.0.1:5500/san-pham/index.html">
+            <a href="./san-pham/index.html">
               <img src="https://cdn0.fahasa.com/media/catalog/product/b/l/bluelock---tap-3.jpg" alt="">
               <p>BlueLock - Tập 3 - Tặng Kèm Card PVC </p>
               <div class="gia-tap">
@@ -268,7 +268,7 @@
             </a>  
             </div>
             <div class="san-pham">
-            <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(2)/index.html">
+            <a href="./san-pham%20-%20Copy%20(2)/index.html">
               <img src="https://cdn0.fahasa.com/media/catalog/product/b/i/bia-ao_tap1.jpg" alt="">
               <p>Fire Force - Tập 1 - Tặng Kèm Bookmark Giấy Hình Nhân Vật ... </p>
               <div class="gia-tap">
@@ -278,7 +278,7 @@
             </a>  
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/c/a/cau-ma-nha-xi-hanako---tap-16.jpg" alt="">
                 <p>"Cậu" Ma Nhà Xí Hanako - Tập 16 - Tặng Kèm 1 Trong 2 Mẫu</p>
                 <div class="gia-tap">
@@ -289,7 +289,7 @@
  
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/k/a/kaguya---sama---cuoc-chien-to-tinh---tap-13.jpg" alt="">
                 <p>Kaguya-Sama: Cuộc Chiến Tỏ Tình - Tập 13</p>
                 <div class="gia-tap">
@@ -299,7 +299,7 @@
               </a>
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/d/r/dragon-ball-super---tap-15---moro---ke-an-hanh-tinh_1.jpg" alt="">
                 <p>Dragon Ball Super - Tập 15: Moro - Kẻ Ăn Hành Tinh</p>
                 <div class="gia-tap">
@@ -309,7 +309,7 @@
               </a>
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/m/y/my-hero-academia---hoc-vien-sieu-anh-hung---tap-32---ke-tiep-theo.jpg" alt="">
                 <p>My Hero Academia - Học Viện Siêu Anh Hùng...</p>
                 <div class="gia-tap">
@@ -319,7 +319,7 @@
               </a>
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/t/u/tuyen-tap-tranh-aidairo-1-cau-ma-nha-xi-hanako.jpg" alt="">
                 <p>Tuyển Tập Tranh AidaIro 1 "Cậu" Ma Nhà Xí Hanako</p>
                 <div class="gia-tap">
@@ -328,7 +328,7 @@
               </a>
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/n/x/nxbtre_full_07592023_025959_1.jpg" alt="">
                 <p>Kỳ Án Siêu Nhiên - Tập 9 - Tặng Kèm Bookmark Giấy</p>
                 <div class="gia-tap">
@@ -338,7 +338,7 @@
               </a>
             </div>
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/n/x/nxbtre_full_07022023_030219.jpg" alt="">
                 <p>KINGDOM - Tập 45 - Tặng Kèm Thẻ Hình Nhân Vật</p>  
                 <div class="gia-tap">
@@ -348,7 +348,7 @@
               </a>
             </div>            
             <div class="san-pham">
-              <a href="http://127.0.0.1:5500/san-pham%20-%20Copy%20(3)/index.html">
+              <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/i/r/iruma-gia-dao---tap-10.jpg" alt="">
                 <p>Iruma Giá Đáo! Tập 10 - Tặng kèm Postcard</p>
                 <div class="gia-tap">
