--- a/san-pham/index.html
+++ b/san-pham/index.html
@@ -21,7 +21,7 @@
     <div class="header">
       <div class="nhan-dan">
         <div class="logo">
-          <a href="http://127.0.0.1:5500/index.html">
+          <a href="/">
             <img
             src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
             alt="FAHASA.COM"
