Saving to Github

--- a/san-pham/index.html
+++ b/san-pham/index.html
@@ -45,24 +45,25 @@
           </div>
         </div>
         <div class="header-icons">
-          <div class="thong-bao">
-            <i class="fa-solid fa-bell"> </i>
-            <div class="chu-9"><p>Thông báo</p></div>
-          </div>
           <div class="gio-hang">
               <i class="fa-solid fa-cart-shopping"></i>
-              <div class="chu-9"><p>Giỏ hàng</p></div>
+              <div class="chu-9"><p>Cart shopping</p></div>
             </a>
           </div>
           <div class="tai-khoan">
             <i class="fa-solid fa-user"></i>
-            <div class="chu-9"> <p>Tài khoản</p> </div>
+            <div class="chu-9"> <p>Account</p> </div>
+          </div>  
+          <div class="thong-bao">
+            <i class="fa-solid fa-address-card"></i>
+            <div class="chu-9"><p>About me</p></div>
           </div>
           <div class="ngon-ngu">
-            <i class="fa-solid fa-language"></i>
-            <div class="chu-9"> <p>Ngôn ngữ</p></div>
+            <i class="fa-solid fa-phone"></i>
+            <div class="chu-9"> <p>Contact</p></div>
           </div>
         </div>
+      </div>
       </div>
     <div class="container">
       <div class="san-pham-4">
