--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./layout/index.css">
-    <link rel="stylesheet" href="./index.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./index.css" /> -->
     <style>
       html {
         scroll-behavior: smooth;
@@ -22,11 +22,13 @@
     <div class="header">
       <div class="nhan-dan">
         <div class="logo">
-           <img
+          <a href="./index.html">
+            <img
             src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
             alt="FAHASA.COM"
             width="200px"
-          />
+          /></a>
+           
         </div>
         <div class="danh-muc">
           <div class="menu"><i class="fa-solid fa-bars"></i></div>
@@ -43,24 +45,26 @@
           </div>
         </div>
         <div class="header-icons">
-          <div class="thong-bao">
-            <i class="fa-solid fa-bell"> </i>
-            <div class="chu-9"><p>Thông báo</p></div>
-          </div>
           <div class="gio-hang">
               <i class="fa-solid fa-cart-shopping"></i>
-              <div class="chu-9"><p>Giỏ hàng</p></div>
+              <div class="chu-9"><p>Cart shopping</p></div>
             </a>
           </div>
           <div class="tai-khoan">
             <i class="fa-solid fa-user"></i>
-            <div class="chu-9"> <p>Tài khoản</p> </div>
+           <a href="./login page/register.html"><div class="chu-9"> <p>Account</p> </div></a> 
+          </div>  
+          <div class="thong-bao">
+            <a href="./about-me.html"><i class="fa-solid fa-address-card"></i>
+            <div class="chu-9"><p>About me</p></div></a>
+            
           </div>
           <div class="ngon-ngu">
-            <i class="fa-solid fa-language"></i>
-            <div class="chu-9"> <p>Ngôn ngữ</p></div>
+            <a href="./contact.html"><i class="fa-solid fa-phone"></i></a>
+            <div class="chu-9"> <p>Contact</p></div>
           </div>
         </div>
+      </div>
 
       </div>
     </div>
@@ -256,7 +260,7 @@
           <div class="title-1">
             <i class="fa-solid fa-fire"></i> <span>XU HƯỚNG MUA SẮM</span>
           </div>
-          <div class="san-pham-2">
+          <div class="san-pham-2" id="list">
             <div class="san-pham">
             <a href="./san-pham/index.html">
               <img src="https://cdn0.fahasa.com/media/catalog/product/b/l/bluelock---tap-3.jpg" alt="">
@@ -270,7 +274,7 @@
             <div class="san-pham">
             <a href="./san-pham%20-%20Copy%20(2)/index.html">
               <img src="https://cdn0.fahasa.com/media/catalog/product/b/i/bia-ao_tap1.jpg" alt="">
-              <p>Fire Force - Tập 1 - Tặng Kèm Bookmark Giấy Hình Nhân Vật ... </p>
+              <p>Fire Force - Tập 1 - Tặng Kèm Bookmark Giấy Hình... </p>
               <div class="gia-tap">
                 <div class="gia-ban"> <b>43.000 đ</b></div>
                 <div class="so-tap"><b>Tập 1</b></div>
@@ -280,7 +284,7 @@
             <div class="san-pham">
               <a href="./san-pham%20-%20Copy%20(3)/index.html">
                 <img src="https://cdn0.fahasa.com/media/catalog/product/c/a/cau-ma-nha-xi-hanako---tap-16.jpg" alt="">
-                <p>"Cậu" Ma Nhà Xí Hanako - Tập 16 - Tặng Kèm 1 Trong 2 Mẫu</p>
+                <p>"Cậu" Ma Nhà Xí Hanako - Tập 16 - Tặng Kèm 1...</p>
                 <div class="gia-tap">
                   <div class="gia-ban"> <b>30.000 đ</b></div>
                   <div class="so-tap"><b>Tập 16</b></div>
@@ -365,7 +369,7 @@
           <div class="san-pham-2">
             <div class="san-pham">
               <img src="https://cdn0.fahasa.com/media/catalog/product/c/o/combo-8935325006685-8936066692298.jpg" alt="">
-              <p>Combo Sách Không Phải Sói Nhưng Cũng Đừng Là Cừu +... </p>
+              <p>Combo Sách Không Phải Sói Nhưng Cũng Đừng Là... </p>
               <div class="gia-tap">
                 <div class="gia-ban"> <b>205.821 đ</b></div>
                 <div class="so-tap-1"><b>-39%</b></div>
@@ -373,7 +377,7 @@
             </div>
             <div class="san-pham">
               <img src="https://cdn0.fahasa.com/media/catalog/product/c/o/combo-8936186546815-8935325006685.jpg" alt="">
-              <p>Combo Sách Không Phải Sói Nhưng Cũng Đừng Là Cừu +... </p>
+              <p>Combo Sách Không Phải Sói Nhưng Cũng Đừng Là... </p>
               <div class="gia-tap">
                 <div class="gia-ban"> <b>211.677 đ</b></div>
                 <div class="so-tap-1"><b>-31%</b></div>
@@ -381,7 +385,7 @@
             </div>
             <div class="san-pham">
               <img src="https://cdn0.fahasa.com/media/catalog/product/1/c/1c09664f5d55a90bf044.jpg" alt="">
-              <p>Combo Muôn Kiếm Nhân Sinh - Many Times, Many Lives - Tập...</p>
+              <p>Combo Muôn Kiếm Nhân Sinh - Many Times, Many...</p>
               <div class="gia-tap">
                 <div class="gia-ban"> <b>429.460 đ</b></div>
                 <div class="so-tap-1"><b>-2%</b></div>
@@ -397,7 +401,7 @@
             </div>
             <div class="san-pham">
               <img src="https://cdn0.fahasa.com/media/catalog/product/c/o/combo-8935280904262-8936067605693.jpg" alt="">
-              <p>Combo Sách Đọc Vị Bất Kì Ai + Khéo Ăn Nói Sẽ Có Được...</p>
+              <p>Combo Sách Đọc Vị Bất Kì Ai + Khéo Ăn Nói Sẽ Có...</p>
               <div class="gia-tap">
                 <div class="gia-ban"> <b>136.053 đ</b></div>
                 <div class="so-tap-1"><b>-44%</b></div>
