--- a/login page/login.html
+++ b/login page/login.html
@@ -100,7 +100,7 @@
       }
       // login
       // console.log(username, password);
-      if (currentUser) {
+      if (currentUser === "user") {
         window.location.href = "./index.html";
       }
       var userList = JSON.parse(localStorage.getItem("userList")) || [];
@@ -125,10 +125,10 @@
           password: password,
         };
         localStorage.setItem("user", JSON.stringify(newUser));
-        if (username.value === "admin") {
-          window.location.href = "./index.html"; // Trang table
+        if (username === "admin") {
+          window.location.href = "../index.html"; // Trang table
         } else {
-          window.location.href = "../index.html"; // Trang danh sach san pham
+          window.location.href = "./index.html"; // Trang danh sach san pham
         }
       } else {
         // Xu li loi
