--- a/login page/index.html
+++ b/login page/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-  />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../layout/index.css">
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../layout/index.css" />
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
     </style>
   </head>
   <body>
@@ -23,43 +26,53 @@
         <div class="logo">
           <a href="../index.html">
             <img
-            src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
-            alt="FAHASA.COM"
-            width="200px"
+              src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
+              alt="FAHASA.COM"
+              width="200px"
           /></a>
-           
         </div>
         <div class="danh-muc">
           <div class="menu"><i class="fa-solid fa-bars"></i></div>
           <div class="down"><i class="fa-solid fa-chevron-down"></i></div>
         </div>
         <div class="thanh-tim-kiem">
-          <input type="text" id="searchValue" placeholder="Tìm kiếm sản phẩm mong muốn..." />
+          <input
+            type="text"
+            id="searchValue"
+            placeholder="Tìm kiếm sản phẩm..."
+          />
           <div class="kinh-lup">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
         </div>
         <div class="header-icons">
-          <div class="gio-hang">
+          <!-- <div class="gio-hang">
               <i class="fa-solid fa-cart-shopping"></i>
               <div class="chu-9"><p>Cart shopping</p></div>
             </a>
-          </div>
-          <div class="tai-khoan">
+          </div> -->
+          <!-- <div class="tai-khoan">
             <i class="fa-solid fa-user"></i>
-           <a href="./register.html"><div class="chu-9"> <p>Account</p> </div></a> 
-          </div>  
+           <a href="./login.html"><div class="chu-9"> <p>Account</p> </div></a> 
+          </div>   -->
           <div class="thong-bao">
-            <a href="../about-me.html"><i class="fa-solid fa-address-card"></i>
-            <div class="chu-9"><p>About me</p></div></a>
+            <a href="../about-me.html"
+              ><i class="fa-solid fa-address-card"></i>
+              <div class="chu-9"><p>About me</p></div></a
+            >
           </div>
           <div class="ngon-ngu">
             <a href="../contact.html"><i class="fa-solid fa-phone"></i></a>
-            <div class="chu-9"> <p>Contact</p></div>
+            <div class="chu-9"><p>Contact</p></div>
           </div>
-             <div class="login-1"><p id="username"></p></div>
-          <div class="login-2"><a href="./login.html" id="login-btn">Login</a></div>
-          <div class="login-3"><button id="logout-btn">Logout</button></div>
+          <div class="login-1"><p id="username"></p></div>
+          <div class="login-3">
+            <div>
+              Hello
+              <span id="userEmail"></span>
+            </div>
+            <button id="logout-btn">Logout</button>
+          </div>
         </div>
       </div>
     </div>
@@ -73,7 +86,7 @@
             <th>Số tập</th>
             <th>Giá</th>
             <th>Giảm</th>
-            <th class="Edit">Chỉnh sửa</th>
+            <th class="Edit" onclick="editName()">Chỉnh sửa</th>
             <th class="Delete">Xóa</th>
           </tr>
         </thead>
@@ -81,6 +94,11 @@
       </table>
     </div>
   </body>
+  <script type="module" src="./login.js">
+    const userEmail = user.email.split("@")[0];
+    document.getElementById('userEmail').textContent = userEmail;
+    console.log(userEmail);
+  </script>
   <script type="module">
     import booksData from "./data.js"; // Thay đổi <---------------------------------
     // Chỉnh sửa chỗ này, cần khai báo biến khác, không thể gán trực tiếp lại
@@ -133,6 +151,9 @@
         editBtn.innerHTML = "Chỉnh sửa";
         editTd.appendChild(editBtn);
         elementTr.appendChild(editTd);
+        editBtn.addEventListener("click", function () {
+          editTr(bookId);
+        });
         //tao nut delete//
         var deleteTd = document.createElement("td");
         var deleteBtn = document.createElement("button");
@@ -153,6 +174,17 @@
       }
     }
     getBooks(books);
+
+    function editName() {
+      const paragraph = document.getElementById("");
+      const editBtn = document.getElementById("editBtn");
+      // const end_button = document.getElementById("end-editing");
+
+      editBtn.addEventListener("click", function () {
+        paragraph.contentEditable = true;
+        paragraph.style.backgroundColor = "#dddbdb";
+      });
+    }
 
     // Thay đổi <---------------------------------
     var searchValue = document.getElementById("searchValue");
@@ -175,15 +207,14 @@
       usernameTag.innerHTML = "";
 
       // An nut login
-      document.getElementById("login-btn").style.display = "block";
+      // document.getElementById("login-btn").style.display = "block";
       // Hien nut logout
-      document.getElementById("logout-btn").style.display = "none";
+      document.getElementById("logout-btn").style.display = "flex";
     }
 
     // Xu ly dang xuat
     var logoutBtn = document.getElementById("logout-btn");
     logoutBtn.addEventListener("click", function () {
-      localStorage.removeItem("user");
       window.location.href = "./login.html";
     });
   </script>
