--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="logo">
           <a href="./index.html">
             <img
-            src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
-            alt="FAHASA.COM"
-            width="200px"
+            src="./picture/linkedin_banner_image_1.png"
+            alt="my-logo"
+            width="150px"
           /></a>
            
         </div>
@@ -168,7 +168,7 @@
           <img src="https://cdn0.fahasa.com/media/wysiwyg/Thang-03-2023/VanHocT323_Banner_310x210.jpg" width="290px" height="200px" alt="">
         </div>        
         <div class="anh-4">
-          <img src="https://cdn0.fahasa.com/media/wysiwyg/Thang-03-2023/FAHASA%20310x210.png" width="290px" height="200px" alt="">
+          <img src="https://cdn0.fahasa.com/media/wysiwyg/Thang-10-2023/NCCMcBooksT1023_Silver_LDPBanner_310x210.png" width="290px" height="200px" alt="">
         </div>
       </div>
       <div class="gioi-thieu-san-pham-1">
@@ -561,10 +561,10 @@
         </div>
         <div class="ve-chung-toi">
           <div class="dia-chi">
-            <img alt="FAHASA.COM" src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/logo.png">
+            <img alt="FAHASA.COM" src="./picture/linkedin_banner_image_1.png" width="300px">
             <div class="chu-5">
               <p>Lầu 5, 387-389 Hai Bà Trưng Quận 3 TP HCM</p>
-              <p>Công Ty Cổ Phần Phát Hành Sách TP HCM - FAHASA60 - 62 Lê Lợi, Quận 1, TP. HCM, Việt Nam</p>
+              <p>Công Ty Cổ Phần Phát Hành Sách TP HCM - Thanh's bookshop - 62 Lê Lợi, Quận 1, TP. HCM, Việt Nam</p>
               <br>
               <p> Fahasa.com nhận đặt hàng trực tuyến và giao hàng tận nơi.</p>
               <p> KHÔNG hỗ trợ đặt mua và nhận hàng trực tiếp tại văn phòng cũng như tất cả Hệ Thống Fahasa trên toàn quốc.</p>
