--- a/login page/index.html
+++ b/login page/index.html
@@ -26,9 +26,9 @@
         <div class="logo">
           <a href="../index.html">
             <img
-              src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
+              src="../picture/linkedin_banner_image_1.png"
               alt="FAHASA.COM"
-              width="200px"
+              width="150px"
           /></a>
         </div>
         <div class="danh-muc">
