--- a/about-me.html
+++ b/about-me.html
@@ -22,9 +22,9 @@
         <div class="logo">
           <a href="./index.html">
             <img
-            src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
+            src="./picture/linkedin_banner_image_1.png"
             alt="FAHASA.COM"
-            width="200px"
+            width="150px"
           /></a>
            
         </div>
