--- a/san-pham/index.html
+++ b/san-pham/index.html
@@ -23,9 +23,9 @@
         <div class="logo">
           <a href="/">
             <img
-            src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/fahasa-logo.png"
-            alt="FAHASA.COM"
-            width="200px"
+            src="../picture/linkedin_banner_image_1.png"
+            alt="my-logo"
+            width="150px"
           />
           </a>  
 
